engine/baml-runtime/src/control_flow/snapshots/baml_runtime__control_flow__tests__headers__invalid@invalid.baml.snap
---
source: baml-runtime/src/control_flow/tests.rs
expression: snapshot_value
input_file: baml-runtime/src/control_flow/testdata/invalid.baml
---
__error: "function `invalid` not found in fixture"
